# hockey_stats_view

./: .gitignore  AUTHENTICATION_SETUP.md  Design Document_ Youth Hockey Statistics Web Application.md  MANIFEST.in  README.md  app.py  data_structure.md  debug_auth.py  generate_password_hash.py  pyproject.toml  requirements.txt  setup.py  temp_hash_generator.py  test_android_headings.html  test_game_roster.py  test_game_stats_roster.py  test_mobile_view.html  test_player_names.py  test_secrets_access.py
hockey_stats/: .gitignore  __init__.py  sheets_service.py  utils.py
hockey_stats/components/: __init__.py  game_stats.py  player_stats.py  team_stats.py
hockey_stats/static/css/: style.css
hockey_stats/static/js/: android_heading_fix.js  mobile_helpers.js
