[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hockey_stats"
version = "0.1.0"
description = "Hockey statistics dashboard"
requires-python = ">=3.9, <3.12"
dependencies = [
    "streamlit==1.33.0",
    "gspread==6.0.2",
    "pandas==2.0.3",
    "numpy==1.24.4",
    "google-auth==2.27.0",
]

[tool.setuptools]
packages = ["hockey_stats"]
